<resources>
    <string name="app_name">CryptoMovies</string>
    <string name="bottom_nav_home_label">Home</string>
    <string name="bottom_nav_watchlist">Watchlist</string>
    <string name="movie_poster_content_desc">movie_poster</string>
    <string name="section_popular_movies">Popular</string>
    <string name="section_top_rated_movies">Top Rated</string>
    <string name="section_now_playing_movies">Now Playing</string>
    <string name="section_upcoming_movies">Upcoming</string>
    <string name="movie_backdrop_cover">Movie Backdrop Cover</string>
    <string name="add_to_watch_list">Add to Watchlist</string>
    <string name="remove_from_watch_list">Remove from Watchlist</string>
    <string name="genres_text">Genres</string>
    <string name="info_label_text">Info</string>
    <string name="cast_label_text">Cast</string>
    <string name="cast_image_content_description">Cast Image</string>
    <string name="original_title_label">Original Title</string>
    <string name="status_label">Status</string>
    <string name="original_language_label">Original Language</string>
    <string name="budget_label">Budget</string>
    <string name="revenue_label">Revenue</string>
    <string name="watchlist_label">Watchlist</string>
    <string name="explore_movies">Explore Movies</string>
    <string name="watchlist_icon">Watchlist Icon</string>
    <string name="your_watchlist_is_empty">Your Watchlist is empty</string>
    <string name="generic_error">Ooopps! Something went wrong, please try again or contact support (not me)</string>
    <string name="generic_error_variant">For this data you will need a network connection. Check your network and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="error_icon">Error Icon</string>
    <string name="back_arrow_icon">Back Arrow Icon</string>
</resources>